# fbthrift

./: CMakeLists.txt
CMake/: fbthrift-config.cmake.in
thrift/: CMakeLists.txt
thrift/compiler/: CMakeLists.txt
thrift/compiler/generate/templates/python/: thrift_enums.py.mustache  thrift_metadata.py.mustache
thrift/compiler/generate/templates/python/clients/: clients.mustache
thrift/compiler/generate/templates/python/services/: services.mustache
thrift/compiler/generate/templates/rust/: client.rs.mustache  mock.rs.mustache  server.rs.mustache  types.rs.mustache
thrift/lib/: CMakeLists.txt  setup.py
thrift/lib/cpp/transport/: THeader.cpp
thrift/lib/py3/: server.pxd  server.pyx
thrift/lib/python/server/: PythonAsyncProcessor.cpp  PythonAsyncProcessorFactory.cpp  python_async_processor.pxd  python_async_processor.pyx  request_context.pxd  request_context.pyx  server.pyx
thrift/lib/python/streaming/: Sink.cpp  py_promise.pxd  py_promise.pyx  python_user_exception.pyx  sink.pxd  sink.pyx  stream.pyx
thrift/pkgconfig/: libfbthrift.pc.in
